修正Base64Util.java,修正DishDao的set操作，检验eclipse->git的可用性