@@ -1,9 +1,7 @@
 package com.it.Agile.util;
 
 import java.io.IOException;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class Base64Util {
 	/**
@@ -12,7 +10,8 @@ public class Base64Util {
 	 * @return 编码后的字符串
 	 */
 	public static String encode(String orign) {
-		return new String(new BASE64Encoder().encode(orign.getBytes()));
+		return new String(Base64.getEncoder().encode(orign.getBytes()));
+		// return new String(new BASE64Encoder().encode(orign.getBytes()));
 	}
 
 	/**
@@ -22,11 +21,8 @@ public class Base64Util {
 	 */
 	public static String decode(String orign) {
 		String result = null;
-		try {
-			result = new String(new BASE64Decoder().decodeBuffer(orign));
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+		if (orign != null)
+			result = new String(Base64.getDecoder().decode(orign.getBytes()));
 		return result;
 	}
 }
